--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>abdu</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -33,4 +33,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+   
 </project>
